--- a/templates/main/pages/blog.html
+++ b/templates/main/pages/blog.html
@@ -74,11 +74,7 @@
                                             <div class="post-options">
                                                 <div class="row">
                                                     <div class="col-lg-12">
-                                                        <ul class="post-tags">
-                                                            <li><i class="fa fa-tags"></i></li>
-                                                            <li><a href="#">Best Templates</a>,</li>
-                                                            <li><a href="#">TemplateMo</a></li>
-                                                        </ul>
+                                                        <h5>Best</h5>
                                                     </div>
                                                 </div>
                                             </div>
@@ -167,15 +163,11 @@
                                         <h2>Tag Clouds</h2>
                                     </div>
                                     <div class="content">
-                                        <ul>
-                                            <li><a href="#">Lifestyle</a></li>
-                                            <li><a href="#">Creative</a></li>
-                                            <li><a href="#">HTML5</a></li>
-                                            <li><a href="#">Inspiration</a></li>
-                                            <li><a href="#">Motivation</a></li>
-                                            <li><a href="#">PSD</a></li>
-                                            <li><a href="#">Responsive</a></li>
-                                        </ul>
+                                        {% for t in tags %}
+                                            <ul>
+                                                <li><a href="#">{{ t }}</a></li>
+                                            </ul>
+                                        {% endfor %}
                                     </div>
                                 </div>
                             </div>
