--- a/templates/main/pages/registr.html
+++ b/templates/main/pages/registr.html
@@ -1,43 +1,20 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
-    {#    <!-- ***** Preloader Start *****  -->#}
-    {#    <!-- <div id="preloader">#}
-    {#        <div class="jumper">#}
-    {#            <div></div>#}
-    {#            <div></div>#}
-    {#            <div></div>#}
-    {#        </div>#}
-    {#    </div>   -->#}
-    {#    <!-- ***** Preloader End ***** -->#}
-    {##}
-    {# #}
-    {##}
-    {#    <!-- Page Content -->#}
-    {#    <!-- Banner Starts Here -->#}
     <div class="heading-page header-text">
         <section class="page-heading">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="text-content">
-                            <h4>contact us</h4>
-                            <h2>let’s stay in touch!</h2>
+                            <h4>Registration</h4>
+                            <h2></h2>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
     </div>
-
-    {#    <!-- Banner Ends Here -->#}
-
-    <div>
-        <form action="" method="post">
-            <label for=""></label>
-        </form>
-    </div>
-
 
     <section class="contact-us">
 
@@ -54,37 +31,38 @@
                                     </div>
                                     <div class="content">
                                         <form id="register" action="" method="post">
+                                            {% csrf_token %}
                                             <div class="row">
                                                 <div class="col-md-12 col-sm-12">
-                                                    <fieldset>
-                                                        <input name="name" type="text" id="name" placeholder="Your name"
-                                                               required="">
-                                                    </fieldset>
+                                                    <label>
+                                                        <i>Username</i>
+                                                        {{ form.username }}  
+                                                    </label>
                                                 </div>
                                                 <div class="col-md-12 col-sm-12">
-                                                    <fieldset>
-                                                        <input name="email" type="text" id="email"
-                                                               placeholder="Your email" required="">
-                                                    </fieldset>
+                                                    <label>
+                                                        <i>Email</i>
+                                                        {{ form.email }}  
+                                                    </label>
                                                 </div>
                                                 <div class="col-md-12 col-sm-12">
-                                                    <fieldset>
-                                                        <input name="password1" type="password" id="password1"
-                                                               placeholder="Your password">
-                                                    </fieldset>
+                                                    <label>
+                                                        <i>Your Password</i>
+                                                        {{ form.password1 }}  
+                                                    </label>
                                                 </div>
                                                 <div class="col-md-12 col-sm-12">
-                                                    <fieldset>
-                                                        <input name="password2" type="password" id="password2"
-                                                               placeholder="Confirm your password">
-                                                    </fieldset>
+                                                    <label>
+                                                        <i>Confirm Your Password</i>
+                                                        {{ form.password2 }}  
+                                                    </label>
                                                 </div>
                                                 <div class="col-lg-12">
-                                                    <fieldset>
+                                                    <label>
                                                         <button type="submit" id="form-submit" class="main-button">
                                                             Register
                                                         </button>
-                                                    </fieldset>
+                                                    </label>
                                                 </div>
                                             </div>
                                         </form>
@@ -94,21 +72,21 @@
                             <div class="col-lg-4">
                                 <div class="sidebar-item contact-information">
                                     <div class="sidebar-heading">
-                                        <h2>contact information</h2>
+                                        <h2>Get In Touch</h2>
                                     </div>
                                     <div class="content">
                                         <ul>
                                             <li>
-                                                <h5>090-484-8080</h5>
+                                                <h5>21-221-2021</h5>
                                                 <span>PHONE NUMBER</span>
                                             </li>
                                             <li>
-                                                <h5>info@company.com</h5>
+                                                <h5>info@sherlockholmes.com</h5>
                                                 <span>EMAIL ADDRESS</span>
                                             </li>
                                             <li>
-                                                <h5>123 Aenean id posuere dui,
-                                                    <br>Praesent laoreet 10660</h5>
+                                                <h5>221b Baker Street,
+                                                    <br>London 10660</h5>
                                                 <span>STREET ADDRESS</span>
                                             </li>
                                         </ul>
