--- a/templates/main/pages/blog.html
+++ b/templates/main/pages/blog.html
@@ -2,18 +2,6 @@
 {% load static %}
 
 {% block content %}
-    {#  <!-- ***** Preloader Start ***** -->#}
-    {#  <!-- <div id="preloader">#}
-    {#      <div class="jumper">#}
-    {#          <div></div>#}
-    {#          <div></div>#}
-    {#          <div></div>#}
-    {#      </div>#}
-    {#  </div>   -->#}
-    {#  <!-- ***** Preloader End ***** -->#}
-    {##}
-    {#  <!-- Page Content -->#}
-    {#  <!-- Banner Starts Here -->#}
     <div class="heading-page header-text">
         <section class="page-heading">
             <div class="container">
@@ -28,24 +16,12 @@
             </div>
         </section>
     </div>
-    {#  <!-- Banner Ends Here -->#}
+
     <section class="call-to-action">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    {#          <!-- <div class="main-content">#}
-                    {#            <div class="row">#}
-                    {#              <div class="col-lg-8">#}
-                    {#                <span>Stand Blog HTML5 Template</span>#}
-                    {#                <h4>Creative HTML Template For Bloggers!</h4>#}
-                    {#              </div>#}
-                    {#              <div class="col-lg-4">#}
-                    {#                <div class="main-button">#}
-                    {#                  <a href="https://templatemo.com/tm-551-stand-blog" target="_parent">Download Now!</a>#}
-                    {#                </div>#}
-                    {#              </div>#}
-                    {#            </div>#}
-                    {#          </div> -->#}
+ 
                 </div>
             </div>
         </div>
@@ -70,11 +46,12 @@
                                                 <li><a href="#">{{ p.created_at |date:"M d, Y" }}</a></li>
                                                 <li><a href="#">12 Comments</a></li>
                                             </ul>
-                                            <p>{{ p.content }}</p>
+                                            <p>{{ p.content|truncatewords:10 }}</p>
                                             <div class="post-options">
                                                 <div class="row">
                                                     <div class="col-lg-12">
-                                                        <h5>Best</h5>
+                                                        <img style="width:20px" src="https://img.icons8.com/ios-glyphs/30/000000/visible--v1.png"/>
+                                                        <span class="pl-2">{{p.views}}</span>
                                                     </div>
                                                 </div>
                                             </div>
