--- a/templates/main/pages/signin.html
+++ b/templates/main/pages/signin.html
@@ -1,28 +1,25 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
-    {#    <!-- ***** Preloader Start *****  -->#}
-    {#    <!-- <div id="preloader">#}
-    {#        <div class="jumper">#}
-    {#            <div></div>#}
-    {#            <div></div>#}
-    {#            <div></div>#}
-    {#        </div>#}
-    {#    </div>   -->#}
-    {#    <!-- ***** Preloader End ***** -->#}
-    {##}
-    {# #}
-    {##}
-    {#    <!-- Page Content -->#}
-    {#    <!-- Banner Starts Here -->#}
+<head>
+    <style>
+        #messages {
+            background-color: grey;
+            color: #fff;
+            padding: 10px;
+            margin-top: 10px;
+        }
+    </style>
+</head>
+<body>
     <div class="heading-page header-text">
         <section class="page-heading">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="text-content">
-                            <h4>contact us</h4>
-                            <h2>let’s stay in touch!</h2>
+                            <h4>Login</h4>
+                            <h2></h2>
                         </div>
                     </div>
                 </div>
@@ -30,20 +27,9 @@
         </section>
     </div>
 
-    {#    <!-- Banner Ends Here -->#}
-
-    <div>
-        <form action="" method="post">
-            <label for=""></label>
-        </form>
-    </div>
-
-
     <section class="contact-us">
-
         <div class="container">
             <div class="row">
-
                 <div class="col-lg-12">
                     <div class="down-contact">
                         <div class="row">
@@ -54,49 +40,56 @@
                                     </div>
                                     <div class="content">
                                         <form id="login" action="" method="post">
+                                            {% csrf_token %}
                                             <div class="row">
                                                 <div class="col-md-12 col-sm-12">
                                                     <fieldset>
+                                                        
+                                                    </fieldset>
+                                                    <label>
                                                         <input name="username" type="text" id="username"
                                                                placeholder="Username" required="">
-                                                    </fieldset>
+                                                    </label>
                                                 </div>
                                                 <div class="col-md-12 col-sm-12">
-                                                    <fieldset>
+                                                     <label>
                                                         <input name="password" type="password" id="password"
-                                                               placeholder="Password">
-                                                    </fieldset>
+                                                        placeholder="Password">
+                                                     </label>
                                                 </div>
                                                 <div class="col-lg-12">
-                                                    <fieldset>
+                                                    <label>
                                                         <button type="submit" id="form-submit" class="main-button">
                                                             Login
                                                         </button>
-                                                    </fieldset>
+                                                    </label>
                                                 </div>
                                             </div>
                                         </form>
                                     </div>
+                                    {% for message in messages %}
+                                        <p id="messages">{{ message }}</p>
+                                    {% endfor %}
                                 </div>
                             </div>
                             <div class="col-lg-4">
                                 <div class="sidebar-item contact-information">
                                     <div class="sidebar-heading">
-                                        <h2>contact information</h2>
+                                        <h2>Get In Touch</h2>
                                     </div>
                                     <div class="content">
                                         <ul>
                                             <li>
-                                                <h5>090-484-8080</h5>
+                                                <h5>21-221-2021</h5>
                                                 <span>PHONE NUMBER</span>
                                             </li>
                                             <li>
-                                                <h5>info@company.com</h5>
+                                                <h5>info@sherlockholmes.com</h5>
                                                 <span>EMAIL ADDRESS</span>
                                             </li>
                                             <li>
-                                                <h5>123 Aenean id posuere dui,
-                                                    <br>Praesent laoreet 10660</h5>
+                                                <h5>221b Baker Street,
+                                                    <br>London 10660</h5>
                                                 <span>STREET ADDRESS</span>
                                             </li>
                                         </ul>
@@ -109,5 +102,6 @@
             </div>
         </div>
     </section>
+</body>
 {% endblock content %}
  
