--- a/templates/main/pages/blog.html
+++ b/templates/main/pages/blog.html
@@ -44,7 +44,7 @@
                                             <ul class="post-info">
                                                 <li><a href="#">{{ p.author|capfirst }}</a></li>
                                                 <li><a href="#">{{ p.created_at |date:"M d, Y" }}</a></li>
-                                                <li><a href="#">12 Comments</a></li>
+                                                <li><a href="#">Comments</a></li>
                                             </ul>
                                             <p>{{ p.content|truncatewords:10 }}</p>
                                             <div class="post-options">
