--- a/templates/main/pages/post-details.html
+++ b/templates/main/pages/post-details.html
@@ -2,18 +2,6 @@
 {% load static %}
 
 {% block content %}
-  <!-- ***** Preloader Start ***** -->
-  <!-- <div id="preloader">
-      <div class="jumper">
-          <div></div>
-          <div></div>
-          <div></div>
-      </div>
-  </div>   -->
-  <!-- ***** Preloader End ***** -->
-
-  <!-- Page Content -->
-  <!-- Banner Starts Here -->
   <div class="heading-page header-text">
     <section class="page-heading">
       <div class="container">
@@ -21,7 +9,7 @@
           <div class="col-lg-12">
             <div class="text-content">
               <h4>Post Details</h4>
-              <h2>Single blog post</h2>
+              <h2></h2>
             </div>
           </div>
         </div>
@@ -29,31 +17,6 @@
     </section>
   </div>
   
-  <!-- Banner Ends Here -->
-
-  <section class="call-to-action">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="main-content">
-            <div class="row">
-              <div class="col-lg-8">
-                <span>Stand Blog HTML5 Template</span>
-                <h4>Creative HTML Template For Bloggers!</h4>
-              </div>
-              <div class="col-lg-4">
-                <div class="main-button">
-                  <a rel="nofollow" href="https://templatemo.com/tm-551-stand-blog" target="_parent">Download Now!</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
   <section class="blog-posts grid-system">
     <div class="container">
       <div class="row">
@@ -194,37 +157,16 @@
                 </div>
               </div>
               <div class="col-lg-12">
-                <div class="sidebar-item categories">
-                  <div class="sidebar-heading">
-                    <h2>Categories</h2>
-                  </div>
-                  <div class="content">
-                    <ul>
-                      <li><a href="#">- Nature Lifestyle</a></li>
-                      <li><a href="#">- Awesome Layouts</a></li>
-                      <li><a href="#">- Creative Ideas</a></li>
-                      <li><a href="#">- Responsive Templates</a></li>
-                      <li><a href="#">- HTML5 / CSS3 Templates</a></li>
-                      <li><a href="#">- Creative &amp; Unique</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-12">
                 <div class="sidebar-item tags">
                   <div class="sidebar-heading">
                     <h2>Tag Clouds</h2>
                   </div>
                   <div class="content">
-                    <ul>
-                      <li><a href="#">Lifestyle</a></li>
-                      <li><a href="#">Creative</a></li>
-                      <li><a href="#">HTML5</a></li>
-                      <li><a href="#">Inspiration</a></li>
-                      <li><a href="#">Motivation</a></li>
-                      <li><a href="#">PSD</a></li>
-                      <li><a href="#">Responsive</a></li>
-                    </ul>
+                      {% for t in tags %}
+                          <ul>
+                              <li><a href="#">{{ t }}</a></li>                  
+                          </ul>                                    
+                      {% endfor %}
                   </div>
                 </div>
               </div>
