--- a/templates/main/categories/motivation.html
+++ b/templates/main/categories/motivation.html
@@ -2,18 +2,6 @@
 {% load static %}
 
 {% block content %}
-    {#  <!-- ***** Preloader Start ***** -->#}
-    {#  <!-- <div id="preloader">#}
-    {#      <div class="jumper">#}
-    {#          <div></div>#}
-    {#          <div></div>#}
-    {#          <div></div>#}
-    {#      </div>#}
-    {#  </div>   -->#}
-    {#  <!-- ***** Preloader End ***** -->#}
-    {##}
-    {#  <!-- Page Content -->#}
-    {#  <!-- Banner Starts Here -->#}
     <div class="heading-page header-text">
         <section class="page-heading">
             <div class="container">
@@ -28,24 +16,12 @@
             </div>
         </section>
     </div>
-    {#  <!-- Banner Ends Here -->#}
+
     <section class="call-to-action">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    {#          <!-- <div class="main-content">#}
-                    {#            <div class="row">#}
-                    {#              <div class="col-lg-8">#}
-                    {#                <span>Stand Blog HTML5 Template</span>#}
-                    {#                <h4>Creative HTML Template For Bloggers!</h4>#}
-                    {#              </div>#}
-                    {#              <div class="col-lg-4">#}
-                    {#                <div class="main-button">#}
-                    {#                  <a href="https://templatemo.com/tm-551-stand-blog" target="_parent">Download Now!</a>#}
-                    {#                </div>#}
-                    {#              </div>#}
-                    {#            </div>#}
-                    {#          </div> -->#}
+ 
                 </div>
             </div>
         </div>
@@ -60,7 +36,7 @@
                                 <div class="col-lg-6">
                                     <div class="blog-post">
                                         <div class="blog-thumb">
-                                            <img src="{{ p.image.url }}" alt="">
+                                            <img style="width:370px; height:auto;" src="{{ p.image.url }}" alt="">
                                         </div>
                                         <div class="down-content">
                                             <span>{{ p.category }}</span>
@@ -68,17 +44,14 @@
                                             <ul class="post-info">
                                                 <li><a href="#">{{ p.author|capfirst }}</a></li>
                                                 <li><a href="#">{{ p.created_at |date:"M d, Y" }}</a></li>
-                                                <li><a href="#">12 Comments</a></li>
+                                                <li><a href="#">Comments</a></li>
                                             </ul>
-                                            <p>{{ p.content }}</p>
+                                            <p>{{ p.content|truncatewords:10 }}</p>
                                             <div class="post-options">
                                                 <div class="row">
                                                     <div class="col-lg-12">
-                                                        <ul class="post-tags">
-                                                            <li><i class="fa fa-tags"></i></li>
-                                                            <li><a href="#">Best Templates</a>,</li>
-                                                            <li><a href="#">TemplateMo</a></li>
-                                                        </ul>
+                                                        <img style="width:20px" src="https://img.icons8.com/ios-glyphs/30/000000/visible--v1.png"/>
+                                                        <span class="pl-2">{{p.views}}</span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -167,15 +140,11 @@
                                         <h2>Tag Clouds</h2>
                                     </div>
                                     <div class="content">
-                                        <ul>
-                                            <li><a href="#">Lifestyle</a></li>
-                                            <li><a href="#">Creative</a></li>
-                                            <li><a href="#">HTML5</a></li>
-                                            <li><a href="#">Inspiration</a></li>
-                                            <li><a href="#">Motivation</a></li>
-                                            <li><a href="#">PSD</a></li>
-                                            <li><a href="#">Responsive</a></li>
-                                        </ul>
+                                        {% for t in tags %}
+                                            <ul>
+                                                <li><a href="#">{{ t }}</a></li>
+                                            </ul>
+                                        {% endfor %}
                                     </div>
                                 </div>
                             </div>
