--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -4,6 +4,25 @@
     <div class="main-banner header-text">
         <div class="container-fluid">
             <div class="owl-banner owl-carousel">
+                <!-- {% for p in latest %}
+                    <div class="item">
+                        <img style="width:520px; height:450;" src="{{ p.image.url }}" alt="">
+                        <div class="item-content">
+                            <div class="main-content">
+                                <div class="meta-category">
+                                    <span>{{ p.category }}</span>
+                                </div>
+                                <a href="post-details.html"><h4>{{p.title}}</h4></a>
+                                <ul class="post-info">
+                                    <li><a href="#">{{ p.author }}</a></li>
+                                    <li><a href="#">{{ p.created_at | date:'M d, Y' }}</a></li>
+                                    <li><a href="#">{{ p.views }} Views</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %} -->
+                    
                 <div class="item">
                     <img src="{% static 'assets/images/banner-item-01.jpg' %}" alt="">
                     <div class="item-content">
@@ -105,165 +124,50 @@
     </div>
 {#    <!-- Banner Ends Here -->#}
 
-    <section class="call-to-action">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="main-content">
-                        <div class="row">
-                            <div class="col-lg-8">
-                                <span>Stand Blog HTML5 Template</span>
-                                <h4>Creative HTML Template For Bloggers!</h4>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="main-button">
-                                    <a rel="nofollow" href="https://templatemo.com/tm-551-stand-blog" target="_parent">Download
-                                        Now!</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
     <section class="blog-posts">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
                     <div class="all-blog-posts">
                         <div class="row">
-                            <div class="col-lg-12">
-                                <div class="blog-post">
-                                    <div class="blog-thumb">
-                                        <img src="{% static 'assets/images/blog-post-01.jpg' %}" alt="">
-                                    </div>
-                                    <div class="down-content">
-                                        <span>Lifestyle</span>
-                                        <a href="post-details.html"><h4>Best Template Website for HTML CSS</h4></a>
-                                        <ul class="post-info">
-                                            <li><a href="#">Admin</a></li>
-                                            <li><a href="#">May 31, 2020</a></li>
-                                            <li><a href="#">12 Comments</a></li>
-                                        </ul>
-                                        <p>Stand Blog is a free HTML CSS template for your CMS theme. You can easily
-                                            adapt or customize it for any kind of CMS or website builder. You are
-                                            allowed to use it for your business. You are NOT allowed to re-distribute
-                                            the template ZIP file on any template collection site for the download
-                                            purpose. <a rel="nofollow" href="https://templatemo.com/contact"
-                                                        target="_parent">Contact TemplateMo</a> for more info. Thank
-                                            you.</p>
-                                        <div class="post-options">
-                                            <div class="row">
-                                                <div class="col-6">
-                                                    <ul class="post-tags">
-                                                        <li><i class="fa fa-tags"></i></li>
-                                                        <li><a href="#">Beauty</a>,</li>
-                                                        <li><a href="#">Nature</a></li>
-                                                    </ul>
-                                                </div>
-                                                <div class="col-6">
-                                                    <ul class="post-share">
-                                                        <li><i class="fa fa-share-alt"></i></li>
-                                                        <li><a href="#">Facebook</a>,</li>
-                                                        <li><a href="#"> Twitter</a></li>
-                                                    </ul>
+                            
+                            {% for p in post %}
+                                <div class="col-lg-12">
+                                    <div class="blog-post">
+                                        <div class="blog-thumb">
+                                            <img style="width:770px; height:auto;" src="{{ p.image.url }}" alt="">
+                                        </div>
+                                        <div class="down-content">
+                                            <span>{{ p.category }}</span>
+                                            <a href="{% url 'post-detail' p.id %}"><h4>{{ p.title }}</h4></a>
+                                            <ul class="post-info">
+                                                <li><a href="#">{{ p.author |capfirst }}</a></li>
+                                                <li><a href="#">{{ p.created_at |date:'M d, Y' }}</a></li>
+                                                <li><a href="#">{{ p.views }} Views</a></li>
+                                            </ul>
+                                            <p>{{ p.content |truncatewords:65 }}</p>
+                                            <div class="post-options">
+                                                <div class="row">
+                                                    <div class="col-6">
+                                                        <ul class="post-tags">
+                                                            <li><i class="fa fa-tags"></i></li>
+                                                            <li><a href="#">Beauty</a>,</li>
+                                                            <li><a href="#">Nature</a></li>
+                                                        </ul>
+                                                    </div>
+                                                    <div class="col-6">
+                                                        <ul class="post-share">
+                                                            <li><i class="fa fa-share-alt"></i></li>
+                                                            <li><a href="#">Facebook</a>,</li>
+                                                            <li><a href="#"> Twitter</a></li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-lg-12">
-                                <div class="blog-post">
-                                    <div class="blog-thumb">
-                                        <img src="{% static 'assets/images/blog-post-02.jpg' %}" alt="">
-                                    </div>
-                                    <div class="down-content">
-                                        <span>Healthy</span>
-                                        <a href="post-details.html"><h4>Etiam id diam vitae lorem dictum</h4></a>
-                                        <ul class="post-info">
-                                            <li><a href="#">Admin</a></li>
-                                            <li><a href="#">May 24, 2020</a></li>
-                                            <li><a href="#">36 Comments</a></li>
-                                        </ul>
-                                        <p>You can support us by contributing a little via PayPal. Please contact <a
-                                                rel="nofollow" href="https://templatemo.com/contact" target="_parent">TemplateMo</a>
-                                            via Live Chat or Email. If you have any question or feedback about this
-                                            template, feel free to talk to us. Also, you may check other CSS templates
-                                            such as <a rel="nofollow" href="https://templatemo.com/tag/multi-page"
-                                                       target="_parent">multi-page</a>, <a rel="nofollow"
-                                                                                           href="https://templatemo.com/tag/resume"
-                                                                                           target="_parent">resume</a>,
-                                            <a rel="nofollow" href="https://templatemo.com/tag/video" target="_parent">video</a>,
-                                            etc.</p>
-                                        <div class="post-options">
-                                            <div class="row">
-                                                <div class="col-6">
-                                                    <ul class="post-tags">
-                                                        <li><i class="fa fa-tags"></i></li>
-                                                        <li><a href="#">Best Templates</a>,</li>
-                                                        <li><a href="#">TemplateMo</a></li>
-                                                    </ul>
-                                                </div>
-                                                <div class="col-6">
-                                                    <ul class="post-share">
-                                                        <li><i class="fa fa-share-alt"></i></li>
-                                                        <li><a href="#">Facebook</a>,</li>
-                                                        <li><a href="#">Twitter</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-12">
-                                <div class="blog-post">
-                                    <div class="blog-thumb">
-                                        <img src="{% static 'assets/images/blog-post-03.jpg' %}" alt="">
-                                    </div>
-                                    <div class="down-content">
-                                        <span>Fashion</span>
-                                        <a href="post-details.html"><h4>Donec tincidunt leo nec magna</h4></a>
-                                        <ul class="post-info">
-                                            <li><a href="#">Admin</a></li>
-                                            <li><a href="#">May 14, 2020</a></li>
-                                            <li><a href="#">48 Comments</a></li>
-                                        </ul>
-                                        <p>Nullam at quam ut lacus aliquam tempor vel sed ipsum. Donec pellentesque
-                                            tincidunt imperdiet. Mauris sit amet justo vulputate, cursus massa congue,
-                                            vestibulum odio. Aenean elit nunc, gravida in erat sit amet, feugiat viverra
-                                            leo. Phasellus interdum, diam commodo egestas rhoncus, turpis nisi
-                                            consectetur nibh, in vehicula eros orci vel neque.</p>
-                                        <div class="post-options">
-                                            <div class="row">
-                                                <div class="col-6">
-                                                    <ul class="post-tags">
-                                                        <li><i class="fa fa-tags"></i></li>
-                                                        <li><a href="#">HTML CSS</a>,</li>
-                                                        <li><a href="#">Photoshop</a></li>
-                                                    </ul>
-                                                </div>
-                                                <div class="col-6">
-                                                    <ul class="post-share">
-                                                        <li><i class="fa fa-share-alt"></i></li>
-                                                        <li><a href="#">Facebook</a>,</li>
-                                                        <li><a href="#">Twitter</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-12">
-                                <div class="main-button">
-                                    <a href="blog.html">View All Posts</a>
-                                </div>
-                            </div>
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
@@ -281,23 +185,17 @@
                             <div class="col-lg-12">
                                 <div class="sidebar-item recent-posts">
                                     <div class="sidebar-heading">
-                                        <h2>Recent Posts</h2>
+                                        <h2>Latest Posts</h2>
                                     </div>
                                     <div class="content">
-                                        <ul>
-                                            <li><a href="post-details.html">
-                                                <h5>Vestibulum id turpis porttitor sapien facilisis scelerisque</h5>
-                                                <span>May 31, 2020</span>
-                                            </a></li>
-                                            <li><a href="post-details.html">
-                                                <h5>Suspendisse et metus nec libero ultrices varius eget in risus</h5>
-                                                <span>May 28, 2020</span>
-                                            </a></li>
-                                            <li><a href="post-details.html">
-                                                <h5>Swag hella echo park leggings, shaman cornhole ethical coloring</h5>
-                                                <span>May 14, 2020</span>
-                                            </a></li>
-                                        </ul>
+                                        {% for lp in latest %}
+                                            <ul>
+                                                <li><a href="{% url 'post-detail' lp.id %}">
+                                                    <h5>{{lp.title}}</h5>
+                                                    <span>{{ lp.created_at | date:'M d, Y' }}</span>
+                                                </a></li>
+                                            </ul>
+                                        {% endfor %}
                                     </div>
                                 </div>
                             </div>
@@ -307,14 +205,14 @@
                                         <h2>Categories</h2>
                                     </div>
                                     <div class="content">
-                                        <ul>
-                                            <li><a href="#">- Nature Lifestyle</a></li>
-                                            <li><a href="#">- Awesome Layouts</a></li>
-                                            <li><a href="#">- Creative Ideas</a></li>
-                                            <li><a href="#">- Responsive Templates</a></li>
-                                            <li><a href="#">- HTML5 / CSS3 Templates</a></li>
-                                            <li><a href="#">- Creative &amp; Unique</a></li>
-                                        </ul>
+                                         <ul>
+                                            <li><a href="{% url 'lifestyle' %}">Lifestyle</a></li>
+                                            <li><a href="{% url 'nature' %}">Nature</a></li>
+                                            <li><a href="{% url 'creative' %}">Creative</a></li>
+                                            <li><a href="{% url 'motivation' %}">Motivation</a></li>
+                                            <li><a href="{% url 'inspiration' %}">Inspiration</a></li>
+                                            <li><a href="{% url 'travel' %}">Travel</a></li>
+                                         </ul>
                                     </div>
                                 </div>
                             </div>
